# uModbus

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: python-package.yml
docs/source/: conf.py  configuration.rst  decompose_requests.rst
scripts/examples/: simple_rtu_client.py  simple_rtu_server.py  simple_tcp_server.py
tests/system/: conftest.py  rtu_server.py  tcp_server.py
tests/system/responses/: test_exception_responses.py  test_exception_rtu_responses.py  test_succesful_responses.py  test_succesful_rtu_responses.py  test_successful_responses.py  test_successful_rtu_responses.py
tests/unit/: conftest.py  test_functions.py  test_route.py  test_tcp.py  test_utils.py
tests/unit/client/: test_tcp.py
tests/unit/client/serial/: test_redundancy_check.py  test_rtu.py
tests/unit/server/: test_tcp.py
tests/unit/server/serial/: test_rtu.py
umodbus/: __init__.py  config.py  exceptions.py  functions.py  route.py  utils.py
umodbus/client/: tcp.py
umodbus/client/serial/: redundancy_check.py  rtu.py
umodbus/server/: __init__.py  tcp.py
umodbus/server/serial/: __init__.py  rtu.py
