[project]
name = "umodbus"
version = "1.0.4"
description = "Implementation of the Modbus protocol in pure Python"
readme = "README.rst"
license = { text = "MPL-2.0" }
requires-python = ">=3.8"
dependencies = [
    "pyserial~=3.4",
]
classifiers=[
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",


    "Topic :: Software Development :: Embedded Systems",
]
authors= [{name="Auke Willem Oosterhoff", email="a.oosterhoff@climotion.com" }]
[project.urls]
homepage = "https://github.com/AdvancedClimateSystems/uModbus"
source = "https://github.com/AdvancedClimateSystems/uModbus"
issues = "https://github.com/AdvancedClimateSystems/uModbus/issues"
documentation = "https://umodbus.readthedocs.io/en/latest/"

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "pytest>=8.3.2",
    "pytest-cov",
    "ruff>=0.14.0",
    "sphinx==2.2.2",
    "sphinx-rtd-theme==3.0.2",
]

[tool.ruff]
extend-exclude = ["venv*"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "D104",  # Missing docstring in public package
  "D107",  # Missing docstring in __init__
  "RUF100",
  "UP032", # f-string
  "UP030", # implicit references for positional format fields
]

select = [
#    "B",   # flake8-bugbear
    "C",   # complexity
#    "D",   # docstrings
    "COM", # trailing comma rules
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "PT",  # flake8-pytest
    "RUF", # ruff base config
    "SIM", # flake-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
    "YTT", # flake8-2020
    # "ARG", # flake8-unused args
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages=[
    "umodbus",
    "umodbus.client",
    "umodbus.client.serial",
    "umodbus.server",
    "umodbus.server.serial",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
